--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <p id="workKnop">Work</p>
         <p id="contactKnop">Contact</p>
     </nav>
-        <img id="me" src="images/me.png" alt="">
-        <h1 id="name">Floris Roest</h1>
-        <h2 id="title">Frontend interactive designer</h2>
+        <img class="me" src="images/me.png" alt="">
+        <h1 class="name">Floris Roest</h1>
+        <h2 class="title">Frontend interactive designer</h2>
 </div>
 
 <div class="workContent">
