--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
 <div class="workContent">
     <div>
         <img class="workImage" src="images/typography.png" alt="">
-                        <p class="workTitle">Typography website</p>
-                        </div>
-    <div>
-        <img class="workImage" src="images/bingosite.png" alt="">
-        <p class="workTitle">Bingo</p>
-        </div>
-        <div>
-            <img class="workImage" src="images/moonsbanner.png" alt="">
-            <p class="workTitle">Banner r/cryptocurrency</p>
-            </div>
-            <div>
-                <img class="workImage" src="images/blackjack.png" alt="">
-                <p class="workTitle">Blackjack</p>
-                </div>
-                <div>
-                    <img class="workImage" src="images/onepager.png" alt="">
-                    <p class="workTitle">Poster</p>
-                    </div>
-                    <div>
-                        <img class="workImage" src="images/screencapture-127-0-0-1-5050-2024-06-14-14_28_38.png" alt="">
-    <p class="workTitle">Clothing blockchain</p>
+        <p class="workTitle">Typography website</p>
     </div>
+        <div>
+            <img class="workImage" src="images/bingosite.png" alt="">
+            <p class="workTitle">Bingo</p>
+        </div>
+            <div>
+                <img class="workImage" src="images/moonsbanner.png" alt="">
+                <p class="workTitle">Banner r/cryptocurrency</p>
+            </div>
+                <div>
+                    <img class="workImage" src="images/blackjack.png" alt="">
+                    <p class="workTitle">Blackjack</p>
+                </div>
+                    <div>
+                        <img class="workImage" src="images/naruto.png" alt="">
+                        <p class="workTitle">Naruto website</p>
+                    </div>
                         <div>
                             <img class="workImage" src="images/screencapture-127-0-0-1-5050-2024-06-14-14_28_38.png" alt="">
                             <p class="workTitle">Clothing blockchain</p>
-                            </div>
+                        </div>
                             <div>
-                                <img class="workImage" src="images/screencapture-127-0-0-1-5050-2024-06-14-14_28_38.png" alt="">
-                                <p class="workTitle">Clothing blockchain</p>
+                                <img class="workImage" src="images/dior.png" alt="">
+                                <p class="workTitle">Dior animation</p>
+                            </div>
+                                <div>
+                                    <img class="workImage" src="images/screencapture-127-0-0-1-5050-2024-06-14-14_28_38.png" alt="">
+                                    <p class="workTitle">Clothing blockchain</p>
                                 </div>
 </div>
 <div class="contact">
