--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <form action="https://api.web3forms.com/submit" method="post">
             <input type="hidden" name="access_key" value="323db3a2-2f6f-4a80-bffe-7c25e19575b9">
             <label for="name">Name</label>
-            <input id="forname" type="text" name="Name">
+            <input id="forname" type="text" name="Name" required>
       
             <label for="email">Email</label>
-            <input id="email" type="email" name="Email">
+            <input id="email" type="email" name="Email" required>
       
             <label for="message">Message</label>
             <textarea id="message" name="Message"></textarea>
-        <input class="button-primary" type="submit" value="Submit" />
+        <input class="button-primary" type="submit" value="Submit" required>
         </form>
     </div>
     <img id="mailImage" src="images/mail-142 (1).svg" alt="">
